[project]
name = "my-course-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.2.15",
    "langchain-community>=0.4.1",
    "langchain-core>=1.3.2",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.2.1",
    "langgraph>=1.1.10",
    "langgraph-cli[inmem]>=0.4.24",
    "ollama>=0.6.1",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]
